# cookiecutter-python

./: .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup_python_env/: action.yml
.github/workflows/: cookiecutter_test.yml  cruft-test.yml  labeler.yml  main.yml  pr-linter.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_cookiecutter.py  utils.py
{{ cookiecutter.__package_name_kebab_case }}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{ cookiecutter.__package_name_kebab_case }}/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
{{ cookiecutter.__package_name_kebab_case }}/.github/: dependabot.yml  labeler.yml
{{ cookiecutter.__package_name_kebab_case }}/.github/actions/setup-poetry/: action.yml
{{ cookiecutter.__package_name_kebab_case }}/.github/workflows/: automated-tests.yml  create-release.yml  devcontainer-checker.yml  labeler.yml  pr-linter.yml  publish-docker.yml  pypi-release.yml  update-codecov.yml
{{ cookiecutter.__package_name_kebab_case }}/scripts/: pre-commit-hook.sh
{{ cookiecutter.__package_name_kebab_case }}/src/: constants.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/: __version__.py  cli.py  constants.py  {{ cookiecutter.__package_name_snake_case }}.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/_config/: __init__.py  config.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/_utils/: __init__.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/config/: __init__.py  config.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/utils/: __init__.py  alerts.py  console.py  errors.py  helpers.py  logging.py
{{ cookiecutter.__package_name_kebab_case }}/tests/: alerts_test.py  cli_test.py  config_test.py  conftest.py  helpers.py
{{cookiecutter.hyphenated}}/: .gitignore  .typos.toml  Dockerfile  README.md  codecov.yml  pyproject.toml
{{cookiecutter.hyphenated}}/.github/: dependabot.yml  labeler.yml
{{cookiecutter.hyphenated}}/.github/actions/setup_python_env/: action.yml
{{cookiecutter.hyphenated}}/.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  pr-linter.yml  tests.yml
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/: __init__.py  cli.py  constants.py
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/utils/: __init__.py  config.py  logging.py
{{cookiecutter.hyphenated}}/tests/: __init__.py  conftest.py  test_cli.py
