[tool.poetry]
    authors     = ["Nathaniel Landau <github@natenate.org>"]
    description = "Personal Cookiecutter template for Python projects"
    license     = "GNU Affero General Public License v3.0"
    name        = "cookiecutter-python"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        commitizen   = "^3.12.0"
        cookiecutter = "^2.4.0"
        cruft        = "^2.15.0"
        pre-commit   = "^3.5.0"
        python       = "^3.10"
        typos        = "^1.16.22"
        yamllint     = "^1.32.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.1.0"
    version_files            = ["pyproject.toml:version"]
