[tool.poetry]
    authors     = ["Nathaniel Landau <github@natenate.org>"]
    description = "Personal Cookiecutter template for Python projects"
    license     = "AGPL-3.0-or-later"
    name        = "cookiecutter-python"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        commitizen   = "^3.13.0"
        cookiecutter = "^2.5.0"
        cruft        = "^2.15.0"
        pre-commit   = "^3.6.0"
        python       = "^3.10"
        typos        = "^1.17.2"
        yamllint     = "^1.33.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.1.0"
    version_files            = ["pyproject.toml:version"]
